2019-09-29  Charlie Zender  <zender@uci.edu>

	* Always define prs_ntf in case no prs_mdp variables are extracted in vertical interpolation

2019-09-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha08: Añjali Mudra';git push
	git tag -a 4.8.2-alpha08 -m 'MacOS 10.14.6 xcode 11 macports 2.6.0 gcc 9.2 issues;ncremap sgs back-compatability, vrt prs tm_nbr fix;nco.texi rgr';git push --tags

	* Ensure ilev name and size match lev name and size for	pure-pressure vertical grids

	* Ensure tm_nbr >= 1 for pure-pressure vertical grids

	* Define and check-for ilev_nm_in == NULL to fix interpolation to pressure-levels

	* Clarify ncks -H == --data option in nco.texi

	* ncremap do not enter file loop for map-only invocations: fl_nbr=0 so bch_nbr=0

2019-09-26  Charlie Zender  <zender@uci.edu>

	* Document simultaneous vertical/horizontal regridding

	* Document ncremap vertical interpolation algorithm options vrt_ntp=lin|log

2019-09-24  Charlie Zender  <zender@uci.edu>

	* Implement landfrac and landmask defaults with -P sgs for back-compatibility

	* Deprecate last vestiges of old-SGS and GSG code from ncremap

2019-09-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.2-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.2-alpha07: XTerra/Sukhasana';git push
	git tag -a 4.8.2-alpha07 -m 'ncremap/ncclimo bch/job loops;ncremap sgs_frc external, re-do SGS, parallelize all, simultaneous hrz vrt;nco.texi rgr';git push --tags

	* Allow simultaneous horizontal/vertical regridding invocation in ncremap

	* Parallelize ncremap main loop except map generation so any single invocation of ncremap should now regrid multiple files simultaneously via background and MPI parallelism, and multiple ncremap invocations will not conflict. Previously that was only true for input files that required no special handling. Now MPAS, RRG, D2F, PDQ blocks are all parallel-safe.
