@@ -1,5 +1,7 @@
 2019-09-29  Charlie Zender  <zender@uci.edu>
 
+	* Allow users to specify pressure coordinate name with plev_nm_in
+
 	* Always define prs_ntf in case no prs_mdp variables are extracted in vertical interpolation
 
 2019-09-27  Charlie Zender  <zender@uci.edu>
